<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
     android:id="@+id/etNombreCompleto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="@string/nombre"
     android:inputType="text" />
    <CalendarView
            android:id="@+id/miCalendario"
            android:layout_width="@dimen/margenAnchoCalendarView"
            android:layout_height="@dimen/margenAltoCalendarView"
            android:layout_gravity="center"/>
    <TextView
        android:id="@+id/fechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintFechaNacimiento"/>
    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:inputType="text" />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="text"/>
    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        android:inputType="text"
        android:maxLength="40"
        android:autofillHints=""/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSiguiente"
        android:background="@color/colorAccent"
        android:onClick="Onclick"/>
</LinearLayout>